[package]
name = "swim-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
snafu = "0.8.5"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
argon2 = { version = "0.5.3", features = ["rand"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
log = "0.4.26"
env_logger = "0.11.6"
chrono = "0.4.39"
